# swift-index

./: LICENSE  README.md  pyproject.toml
swift_index/: base_index.py  bm25_index.py  faiss_index.py  hybrid_index.py  keyword.py  keyword_index.py  semantic.py  sparse_index.py
tests/: build_tests.py
