[tool.poetry]
name = "swift-index"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "swift_index"}]

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
faiss-cpu = "^1.9.0.post1"
bm25s = "^0.2.4"
scipy = "^1.14.1"
pandas = "^2.2.3"
numpy = "^2.1.3"
sentence-transformers = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
